<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secuencia De Labores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_ordenes_sincronizar">Sincronizar</string>
    <string name="menu_ordenes_secuencia">Add Ordenes</string>
    <string name="menu_ordenes_secuenciaqnp">Add Ordenes QNP</string>
    <string name="menu_clienteweb_sec_toda">Toda Secuencia</string>
    <string name="menu_clienteweb_sec_sugerida">Secuencia Sugerida</string>
    <string name="menu_secqnp_bajar">Bajar Secuencia QNP</string>
    <string name="menu_url_reiniciar_sistema">Reiniciar Informacion</string>
    <string name="title_activity_listas">Listas</string>
    <string name="lista_a">Lista:</string>
    <string name="title_activity_add_list">AddList</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="email">Correo Electronico:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Entrar</string>
    <string name="titulo_app">Me gustan los regalos!</string>
    <string name="olvido_password">¿Olvidó su contraseña?</string>
    <string name="msg_debe_nombrar_lista">Debe de escribir un nombre a la lista!</string>
    <string name="nombre">*Nombre:</string>
    <string name="apellido">*Apellido:</string>
    <string name="repetir">*Repetir:</string>
    <string name="titulo_registro">Registro! I like gifts</string>
    <string name="correo_electronico">*Correo Electronico:</string>
    <string name="sexo">*Sexo:</string>
    <string name="pais">*Pais:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fecha_nacimiento">Fecha Nac</string>
    <string name="titulo_lista_regalos">Listas de regalos</string>
    <string name="cambiar_nombre">Cambiar Nombre</string>
    <string name="cambiar_ocasion">Cambiar Ocasion</string>
    <string name="cambiar_precio">Asignar precio</string>
    <string name="eliminar_lista">Eliminar Lista</string>
    <string name="email_correcto">E-mail correcto</string>
    <string name="email_incorrecto">E-mail incorrecto</string>
    <string name="titulopersonalizado">I Like gifts juan</string>
    <string name="cambiar_estatus">Cambiar Estado de Compra</string>
    <string name="titulo_lista">Mi Lista</string>
    <string name="selectFrente">Seleccionar Frente:</string>
    <string name="title_activity_oclista_ordenes">Lista de Ordenes</string>
    <string name="title_activity_cliente_web">ClienteWeb</string>
    <string name="title_activity_pruebas">Pruebas</string>
    <string name="title_activity_ordenes">Ordenes de Cosecha</string>
    <string name="msg_debe_escribir_valor">Debe de escribir un valor</string>
    <string name="title_activity_secuencia_qnp">SecuenciaQnp</string>
    <string name="title_activity_main_ordenes">Orden de Cosecha</string>
    <string name="titulo_seleccionar_frente">Seleccionar el Frente:</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_add_ordenes_programdas">AddOrdenesProgramdas</string>
    <string name="menu_url_updateapp">Bajar Actualizacion de Aplicacion</string>
    <string name="title_activity_secuencia_labores">SecuenciaLabores</string>
    <string name="title_activity_detalles_labores">DetallesLabores</string>
    <string name="title_activity_lista_secuencia_labores">ListaSecuenciaLabores</string>
    <string name="menu_labores_add">ADD Nueva Labor</string>
    <string name="menu_labores_edit">EDITAR</string>
    <string name="menu_detalle_labor_add">ADD PRODUCTO</string>
    <string name="menu_detalle_labor_guardar">GUARDAR LABORES</string>
    <string name="title_activity_actividad_principal">ActividadPrincipal</string>
    <string name="title_activity_act_configuracion">Configuracion</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_act_lista_visitas">ActListaVisitas</string>
    <string name="title_activity_act_lotes_select">ActLotesSelect</string>

</resources>
